tests/snapshots/lexer__numbers__float_exp_neg.snap
---
source: tests/lexer.rs
expression: "lex(\"2.5e-3\")"
---
Ok(
    [
        Token {
            kind: Float(
                0.0025,
            ),
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 6,
                end: 6,
            },
        },
    ],
)
