tests/snapshots/lexer__numbers__float_exp_pos.snap
---
source: tests/lexer.rs
expression: "lex(\"2.5e+3\")"
---
Ok(
    [
        Token {
            kind: Float(
                2500.0,
            ),
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 6,
                end: 6,
            },
        },
    ],
)
