tests/snapshots/lexer__numbers__float_leading_dot.snap
---
source: tests/lexer.rs
expression: "lex(\".5\")"
---
Ok(
    [
        Token {
            kind: Float(
                0.5,
            ),
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
