tests/snapshots/lexer__numbers__float_trailing_dot.snap
---
source: tests/lexer.rs
expression: "lex(\"1.\")"
---
Ok(
    [
        Token {
            kind: Float(
                1.0,
            ),
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
