tests/snapshots/lexer__numbers__float_with_underscore.snap
---
source: tests/lexer.rs
expression: "lex(\"1_000.5\")"
---
Ok(
    [
        Token {
            kind: Float(
                1000.5,
            ),
            span: Span {
                start: 0,
                end: 7,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 7,
                end: 7,
            },
        },
    ],
)
