tests/snapshots/lexer__numbers__int_basic.snap
---
source: tests/lexer.rs
expression: "lex(\"42\")"
---
Ok(
    [
        Token {
            kind: Int(
                42,
            ),
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
