tests/snapshots/lexer__numbers__int_underscores.snap
---
source: tests/lexer.rs
expression: "lex(\"1_000_000\")"
---
Ok(
    [
        Token {
            kind: Int(
                1000000,
            ),
            span: Span {
                start: 0,
                end: 9,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 9,
                end: 9,
            },
        },
    ],
)
